--- a/source/index.html
+++ b/source/index.html
@@ -219,8 +219,7 @@
         <div class="basic-products__block">
           <section class="basic-products__filter catalog-filter" data-test="filter">
             <h2 class="visually-hidden">Список выбора кофе</h2>
-            <form class="basic-products__form filters" id="catalog-form" action="https://echo.htmlacademy.ru/"
-              method="get">
+            <form class="basic-products__form filters" id="catalog-form" action="https://echo.htmlacademy.ru/">
               <fieldset class="filters__group range">
                 <legend class="filters__title">Цена</legend>
                 <div class="range__target"></div>
