делает карту на всю ширину

--- a/source/index.html
+++ b/source/index.html
@@ -530,8 +530,8 @@
       </div>
     </section>
 
-    <section class="contacts ">
-      <div class="contacts__picture-wrapper container">
+    <section class="contacts">
+      <div class="contacts__picture-wrapper">
         <h2 class="visually-hidden">Расположение магазина на карте</h2>
         <picture>
           <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="images/map-desktop@1x.webp 1x, images/map-desktop@2x.webp 2x" width="1440" height="400">
