--- a/source/index.html
+++ b/source/index.html
@@ -549,63 +549,61 @@
 
   </main>
 
-  <footer class="main-footer" data-test="footer">
-    <div class="main-footer__wrapper container">
-      <div class=".main-footer-social__wrapper social">
-        <a class="main-footer__link" href="index.html">
-          <span class="visually-hidden">Логотип Drink2Go</span>
-          <svg class="main-footer__link-logo" width="128" height="24" fill="none">
-            <use href="icons/stack.svg#logo-text"></use>
-          </svg>
+  <footer class="footer" data-test="footer">
+    <div class="footer__wrapper container">
+      <div class="footer__header">
+        <a class="logo footer__logo" href="#!">
+          <picture>
+            <source media="(min-width: 768px)" srcset="./images/logo-desktop.svg">
+            <img class="logo__img" src="./images/logo-tablet.svg" alt="Логотип Drink2Go" width="82" height="36">
+          </picture>
+          <span class="logo__description logo__description--footer">Интернет-магазин кофейных напитков</span>
         </a>
-        <ul class="main-footer__social ">
+        <ul class="footer__social social">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы в Вконтакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Мы в Ютубе</span>
-            </a>
+            <a href="https://pinterest.com" class="social__link social__link--pinterest"
+              aria-label="Мы на Pinterest"></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Мы в Телеграме</span>
-            </a>
+            <a href="https://ok.ru" class="social__link social__link--ok" aria-label="Мы на одноклассниках"></a>
           </li>
         </ul>
-        <a class="main-footer__developer-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="main-footer__developer-text">HTML Academy</span>
-          <span class="visually-hidden">Логотип Кэт энерджи</span>
-          <svg class="main-footer__developer-logo" width="27" height="34" fill="none">
-            <use href="icons/stack.svg#icon-html-academy"></use>
-          </svg>
-        </a>
       </div>
-      <div class=".main-footer-shop__wrapper">
-        <h3 class=".main-footer__title">Интернет-магазин</h3>
-        <ul class=".main-footer-shop__list">
-          <li class=".main-footer-shop__item">Каталог</li>
-          <li class=".main-footer-shop__item">Доставка</li>
-          <li class=".main-footer-shop__item">Способы оплаты</li>
-          <li class=".main-footer-shop__item">О нас</li>
+      <div class="footer-shop__wrapper">
+        <h3 class="footer__title">Интернет-магазин</h3>
+        <ul class="footer__list">
+          <li class="footer-shop__item"><a href="#!" class="footer__link">Каталог</a></li>
+          <li class="footer-shop__item"><a href="#!" class="footer__link">Доставка</a></li>
+          <li class="footer-shop__item"><a href="#!" class="footer__link">Способы оплаты</a></li>
+          <li class="footer-shop__item"><a href="#!" class="footer__link">О нас</a></li>
         </ul>
       </div>
-      <div class=".main-footer-media__wrapper">
-        <h3 class=".main-footer__title">Медиа</h3>
-        <ul class=".main-footer-media__list">
-          <li class=".main-footer-media__item">Блог</li>
-          <li class=".main-footer-media__item">Информация для СМИ</li>
-          <li class=".main-footer-media__item">Правовая информация</li>
+      <div class="footer-media__wrapper">
+        <h3 class="footer__title">Медиа</h3>
+        <ul class="footer__list">
+          <li class="footer-media__item"><a href="#!" class="footer__link">Блог</a></li>
+          <li class="footer-media__item"><a href="#!" class="footer__link">Информация для СМИ</a></li>
+          <li class="footer-media__item"><a href="#!" class="footer__link">Правовая информация</a></li>
         </ul>
       </div>
-      <div class=".main-footer-contacts__wrapper">
-        <h3 class=".main-footer__title">Контакты</h3>
-        <div class=".main-footer-contacts__list">
-          <address class=".main-footer-contacts__adress">Санкт-Петербург, набережная реки Карповки, дом 5</address>
-          <a href="tel:+79999999999" class=".main-footer-contacts__phone">+7 (999) 999-99-99</a>
-        </div>
+      <div class="footer-contacts__wrapper">
+        <h3 class="footer__title">Контакты</h3>
+        <ul class="footer__list">
+          <li class="footer__links-item">
+            <a href="#!" class="footer__link footer__link--contacts footer__link--contacts-address">Санкт-Петербург,
+              набережная реки Карповки, дом
+              5</a>
+          </li>
+          <li class="footer__links-item">
+            <a href="tel:+79999999" class="footer__link footer__link--contacts footer__link--contacts-telephone">+7
+              (999) 999-99-99</a>
+          </li>
+        </ul>
       </div>
       <p class="footer__development">
         Разработано
