--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
             height="36">
           <source media="(min-width: 768px)" srcset="images/nav/logo-tablet.svg" type="image/svg+xml" width="82"
             height="36">
-          <img class="main-header__logo-image" src="images/nav/logo-mobile.svg" width="32" height="36"
+          <img class="header__logo-image" src="images/nav/logo-mobile.svg" width="32" height="36"
             alt="Логотип Drink 2 Go" loading="lazy">
         </picture>
         <span class="logo__description">Интернет-магазин
@@ -198,7 +198,7 @@
       <div class="basic-products__wrapper container">
         <div class="basic-products__header">
           <span class="basic-products__promo">Каталог</span>
-          <h1 class="basic-products__title">Каталог кофейных напитков</h1>
+          <h2 class="basic-products__title">Каталог кофейных напитков</h2>
         </div>
 
         <div class="basic-products__block">
@@ -493,7 +493,7 @@
                     </a>
                     <p class="cards__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                   </div>
-                  <div class="basic-products__order" href="#">
+                  <div class="basic-products__order">
                     <span class="basic-products__price">225₽</span>
                     <a class="basic-products__button--block">
                       <svg class="basic-products__icon" aria-hidden="true" focusable="false" width="20" height="16"
@@ -559,7 +559,7 @@
           </li>
         </ul>
       </div>
-      <div class="footer-shop__wrapper">
+      <div class="footer-shop">
         <h3 class="footer__title">Интернет-магазин</h3>
         <ul class="footer__list">
           <li class="footer-shop__item"><a href="#!" class="footer__link">Каталог</a></li>
@@ -568,7 +568,7 @@
           <li class="footer-shop__item"><a href="#!" class="footer__link">О нас</a></li>
         </ul>
       </div>
-      <div class="footer-media__wrapper">
+      <div class="footer-media">
         <h3 class="footer__title">Медиа</h3>
         <ul class="footer__list">
           <li class="footer-media__item"><a href="#!" class="footer__link">Блог</a></li>
@@ -576,7 +576,7 @@
           <li class="footer-media__item"><a href="#!" class="footer__link">Правовая информация</a></li>
         </ul>
       </div>
-      <div class="footer-contacts__wrapper">
+      <div class="footer-contacts">
         <h3 class="footer__title">Контакты</h3>
         <ul class="footer__list">
           <li class="footer__links-item">
