--- a/source/index.html
+++ b/source/index.html
@@ -509,6 +509,31 @@
               </div>
             </li>
           </ul>
+          <ul class="pagination">
+            <li class="pagination__item">
+              <a href="#!"
+                class="button button--secondary pagination__link pagination__link--nav pagination__link--prev"
+                id="page-prev">
+                <span class="pagination__text">Назад</span>
+              </a>
+            </li>
+            <li class="pagination__item">
+              <a href="#!" class="button button--secondary pagination__link" id="page-1">1</a>
+            </li>
+            <li class="pagination__item">
+              <a class="button button--secondary pagination__link pagination__link--active" id="page-2">2</a>
+            </li>
+            <li class="pagination__item">
+              <a href="#!" class="button button--secondary pagination__link" id="page-3">3</a>
+            </li>
+            <li class="pagination__item">
+              <a href="#!"
+                class="button button--secondary pagination__link pagination__link--nav pagination__link--next"
+                id="page-next">
+                <span class="pagination__text">Вперед</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
