добавляет разметку для тестирования

--- a/source/index.html
+++ b/source/index.html
@@ -168,7 +168,7 @@
       </div>
     </section>
 
-    <section class="features">
+    <section class="features" data-test="features">
       <div class="container">
         <span class="features__promo">Преимущества</span>
         <h2 class="features__title">Главные причины выбрать Drink2Go</h2>
@@ -194,7 +194,7 @@
       </div>
     </section>
 
-    <section class="basic-products">
+    <section class="basic-products" data-test="catalog">
       <div class="basic-products__wrapper container">
         <div class="basic-products__header">
           <span class="basic-products__promo">Каталог</span>
@@ -479,12 +479,12 @@
               </div>
             </li>
           </ul>
-          <ul class="pagination">
+          <ul class="pagination slider-pagination">
             <li class="pagination__item">
               <a href="#!"
                 class="button button--secondary pagination__link pagination__link--nav pagination__link--prev"
                 id="page-prev">
-                <span class="pagination__text">Назад</span>
+                <span class="pagination__text slider-button-prev">Назад</span>
               </a>
             </li>
             <li class="pagination__item">
@@ -500,7 +500,7 @@
               <a href="#!"
                 class="button button--secondary pagination__link pagination__link--nav pagination__link--next"
                 id="page-next">
-                <span class="pagination__text">Вперед</span>
+                <span class="pagination__text slider-button-next">Вперед</span>
               </a>
             </li>
           </ul>
@@ -508,7 +508,7 @@
       </div>
     </section>
 
-    <section class="contacts">
+    <section class="contacts" data-test="map">
       <div class="contacts__picture-wrapper">
         <h2 class="visually-hidden">Расположение магазина на карте</h2>
         <picture>
