корректирует mobile по pixel perfect

--- a/source/index.html
+++ b/source/index.html
@@ -184,7 +184,7 @@
           <li class="features__item features__energy">
             <h3 class="features__name">Бодрость</h3>
             <p class="features__description">
-              Сбалансированная доза кофеина даст мощный заряд энергии</p>
+              Сбалансированная доза кофеина <br>даст мощный заряд энергии</p>
           </li>
           <li class="features__item features__eco">
             <h3 class="features__name">Экологичность</h3>
@@ -315,7 +315,7 @@
                   <a class="cards__link-text" href="#">
                     <h3 class="cards__title">Декаф Флэт Уайт</h3>
                   </a>
-                  <p class="cards__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                  <p class="cards__description">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
@@ -346,7 +346,7 @@
                   <a class="cards__link-text" href="#">
                     <h3 class="cards__title">Декаф Флэт Уайт</h3>
                   </a>
-                  <p class="cards__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                  <p class="cards__description">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
@@ -377,7 +377,7 @@
                   <a class="cards__link-text" href="#">
                     <h3 class="cards__title">Декаф Флэт Уайт</h3>
                   </a>
-                  <p class="cards__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                  <p class="cards__description">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
@@ -408,7 +408,7 @@
                   <a class="cards__link-text" href="#">
                     <h3 class="cards__title">Декаф Флэт Уайт</h3>
                   </a>
-                  <p class="cards__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                  <p class="cards__description">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
@@ -439,7 +439,7 @@
                   <a class="cards__link-text" href="#">
                     <h3 class="cards__title">Декаф Флэт Уайт</h3>
                   </a>
-                  <p class="cards__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                  <p class="cards__description">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
@@ -470,7 +470,7 @@
                   <a class="cards__link-text" href="#">
                     <h3 class="cards__title">Декаф Флэт Уайт</h3>
                   </a>
-                  <p class="cards__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                  <p class="cards__description">Кофе без кофеина из Эфиопии <br>с натуральным фермерским молоком</p>
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
@@ -574,7 +574,7 @@
       </div>
       <div class="footer-contacts">
         <h3 class="footer__title">Контакты</h3>
-        <ul class="footer__list">
+        <ul class="footer__list footer__list--contacts">
           <li class="footer__links-item">
             <a href="#!" class="footer__link footer__link--contacts footer__link--contacts-address">Санкт-Петербург,
               набережная реки Карповки, дом
