корректирует tablet по pixel perfect

--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
 
 <body class="page__body page__body--nojs">
   <header class="header" data-test="header">
-    <div class="container header__layout">
+    <div class="container header__wrapper">
       <a class="logo header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1440px)" srcset="images/nav/logo-desktop.svg" type="image/svg+xml" width="170"
@@ -515,13 +515,13 @@
           <source type="image/webp" media="(min-width: 1440px)"
             srcset="images/map/map-desktop@1x.webp 1x, images/map/map-desktop@2x.webp 2x" width="1440" height="540">
           <source type="image/webp" media="(min-width: 768px)"
-            srcset="images/map/map-tablet@1x.webp 1x, images/map/map-tablet@2x.webp 2x" width="768" height="400">
+            srcset="images/map/map-tablet@1x.webp 1x, images/map/map-tablet@2x.webp 2x" width="768" height="480">
           <source type="image/webp" srcset="images/map/map-mobile@1x.webp 1x, images/map/map-mobile@2x.webp 2x"
             width="320" height="420">
           <source type="image/jpeg" media="(min-width: 1440px)"
             srcset="images/map/map-desktop@1x.jpg 1x, images/map/map-desktop@2x.jpg 2x" width="1440" height="540">
           <source type="image/jpeg" media="(min-width: 768px)"
-            srcset="images/map/map-tablet@1x.jpg 1x, images/map/map-tablet@2x.jpg 2x" width="768" height="400">
+            srcset="images/map/map-tablet@1x.jpg 1x, images/map/map-tablet@2x.jpg 2x" width="768" height="480">
           <img class="contacts__map-image" src="images/map/map-mobile@1x.jpg" srcset="images/map/map-mobile@2x.jpg 2x"
             alt="Расположение магазина на карте" width="320" height="420" loading="lazy">
         </picture>
