--- a/source/index.html
+++ b/source/index.html
@@ -169,7 +169,7 @@
     </section>
 
     <section class="features" data-test="features">
-      <div class="container">
+      <div class="features__wrapper container">
         <span class="features__promo">Преимущества</span>
         <h2 class="features__title">Главные причины выбрать Drink2Go</h2>
         <ul class="features__list">
