корректирует замечания по БЭМ

--- a/source/index.html
+++ b/source/index.html
@@ -282,9 +282,9 @@
 
         </div>
         <div class="basic-products__list--wrapper">
-          <div class="basic-products__find--block">
-            <h2 class="basic-products__find--title">Сортировка:</h2>
-            <select class="basic-products__find--select" aria-label="Сортировка">
+          <div class="basic-products__find find">
+            <h2 class="find__title">Сортировка:</h2>
+            <select class="find__select" aria-label="Сортировка">
               <option value="default">по умолчанию</option>
               <option value="cheap">cначала дешёвые</option>
               <option value="expensive">cначала дорогие</option>
