--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
           aria-label="Раскрыть/Свернуть меню"></button>
         <ul class="site-navigation__list">
           <li class="site-navigation__item">
-            <a class="header__link site-navigation__link site-navigation__link--active">Главная</a>
+            <a class="header__link site-navigation__link site-navigation__link--active" href="#!">Главная</a>
           </li>
           <li class="site-navigation__item">
             <a class="header__link site-navigation__link" href="#!">Каталог</a>
@@ -55,13 +55,13 @@
       <div class="user-navigation user-navigation--header">
         <ul class="user-navigation__list">
           <li class="user-navigation__item">
-            <a href="#!" class="header__link user-navigation__link user-navigation__link--profile"
+            <a class="header__link user-navigation__link user-navigation__link--profile" href="#!"
               aria-label="Войти в личный кабинет">
               <span class="user-navigation__link-text">Войти</span>
             </a>
           </li>
           <li class="user-navigation__item">
-            <a href="#!" class="header__link user-navigation__link user-navigation__link--cart"
+            <a class="header__link user-navigation__link user-navigation__link--cart" href="#!"
               aria-label="Ваша корзина">
               <span class="user-navigation__link-text">Корзина</span>
             </a>
@@ -79,16 +79,21 @@
         <div class="hero-swiper__wrapper swiper-wrapper">
           <div class="hero__card hero__card--flat-white swiper-slide">
             <picture class="hero__picture">
-              <!-- <source media="(min-width: 1440px)" type="image/webp"
-                srcset="images/slider/flat-white-desktop.webp 1x, images/slider/flat-white-desktop@2x.webp 2x">
+              <source media="(min-width: 1440px)" type="image/webp"
+                srcset="images/slider/flat-white-desktop.webp 1x, images/slider/flat-white-desktop@2x.webp 2x" width="280"
+                height="280">
               <source media="(min-width: 768px)" type="image/webp"
-                srcset="images/slider/flat-white-tablet.webp 1x, images/slider/flat-white-tablet@2x.webp 2x">
+                srcset="images/slider/flat-white-tablet.webp 1x, images/slider/flat-white-tablet@2x.webp 2x" width="280"
+                height="280">
               <source type="image/webp"
-                srcset="images/slider/flat-white-mobile.webp 1x, images/slider/flat-white-mobile@2x.webp 2x"> -->
+                srcset="images/slider/flat-white-mobile.webp 1x, images/slider/flat-white-mobile@2x.webp 2x" width="280"
+                height="280">
               <source media="(min-width: 1440px)"
-                srcset="images/slider/flat-white-desktop.png 1x, images/slider/flat-white-desktop@2x.png 2x">
+                srcset="images/slider/flat-white-desktop.png 1x, images/slider/flat-white-desktop@2x.png 2x" type="image/png" width="280"
+                height="280">
               <source media="(min-width: 768px)"
-                srcset="images/slider/flat-white-tablet.png 1x, images/slider/flat-white-tablet@2x.png 2x">
+                srcset="images/slider/flat-white-tablet.png 1x, images/slider/flat-white-tablet@2x.png 2x" type="image/png" width="280"
+                height="280">
               <img src="images/slider/flat-white-mobile.png" srcset="images/slider/flat-white-mobile@2x.png 2x"
                 width="280" height="280" alt="Изображение товара Декаф Флэт Уайт">
             </picture>
@@ -100,22 +105,27 @@
               <div class="hero__price">
                 <del class="hero__old-price">295&#8381;</del>
                 <span class="hero__new-price">225&#8381;</span>
-                <a href="#!" class="button hero__button">Заказать</a>
+                <a class="button hero__button" href="#!">Заказать</a>
               </div>
             </div>
           </div>
           <div class="hero__card hero__card--lavender-latte swiper-slide">
             <picture class="hero__picture">
-              <!-- <source media="(min-width: 1440px)" type="image/webp"
-                srcset="images/slider/lavender-desktop.webp 1x, images/slider/lavender-desktop@2x.webp 2x">
+              <source media="(min-width: 1440px)" type="image/webp"
+                srcset="images/slider/lavender-desktop.webp 1x, images/slider/lavender-desktop@2x.webp 2x" width="280"
+                height="280">
               <source media="(min-width: 768px)" type="image/webp"
-                srcset="images/slider/lavender-tablet.webp 1x, images/slider/lavender-tablet@2x.webp 2x">
+                srcset="images/slider/lavender-tablet.webp 1x, images/slider/lavender-tablet@2x.webp 2x" width="280"
+                height="280">
               <source type="image/webp"
-                srcset="images/slider/lavender-mobile.webp 1x, images/slider/lavender-mobile@2x.webp 2x"> -->
+                srcset="images/slider/lavender-mobile.webp 1x, images/slider/lavender-mobile@2x.webp 2x" width="280"
+                height="280">
               <source media="(min-width: 1440px)"
-                srcset="images/slider/lavender-desktop.png 1x, images/slider/lavender-desktop@2x.png 2x">
+                srcset="images/slider/lavender-desktop.png 1x, images/slider/lavender-desktop@2x.png 2x" type="image/png"  width="280"
+                height="280">
               <source media="(min-width: 768px)"
-                srcset="images/slider/lavender-tablet.png 1x, images/slider/lavender-tablet@2x.png 2x">
+                srcset="images/slider/lavender-tablet.png 1x, images/slider/lavender-tablet@2x.png 2x" type="image/png"  width="280"
+                height="280">
               <img src="images/slider/lavender-mobile.png" srcset="images/slider/lavender-mobile@2x.png 2x" width="280"
                 height="280" alt="Изображение товара Лавандовый Латте">
             </picture>
@@ -127,22 +137,27 @@
               <div class="hero__price">
                 <del class="hero__old-price">285&#8381;</del>
                 <span class="hero__new-price">265&#8381;</span>
-                <a href="#!" class="button hero__button">Заказать</a>
+                <a class="button hero__button" href="#!">Заказать</a>
               </div>
             </div>
           </div>
           <div class="hero__card hero__card--espresso swiper-slide">
             <picture class="hero__picture">
-              <!-- <source media="(min-width: 1440px)" type="image/webp"
-                srcset=" 1x, images/slider/espresso_desktop@2x.webp 2x">
+              <source media="(min-width: 1440px)" type="image/webp"
+                srcset="images/slider/espresso-desktop.png 1x, images/slider/espresso-desktop@2x.webp 2x" width="280"
+                height="280">
               <source media="(min-width: 768px)" type="image/webp"
-                srcset="images/slider/espresso-tablet.webp 1x, images/slider/espresso-tablet@2x.webp 2x">
+                srcset="images/slider/espresso-tablet.webp 1x, images/slider/espresso-tablet@2x.webp 2x" width="280"
+                height="280">
               <source type="image/webp"
-                srcset="images/slider/espresso-mobile.webp 1x, images/slider/espresso-mobile@2x.webp 2x"> -->
+                srcset="images/slider/espresso-mobile.webp 1x, images/slider/espresso-mobile@2x.webp 2x" width="280"
+                height="280">
               <source media="(min-width: 1440px)"
-                srcset="images/slider/espresso-desktop.png 1x, images/slider/espresso-desktop@2x.png 2x">
+                srcset="images/slider/espresso-desktop.png 1x, images/slider/espresso-desktop@2x.png 2x" type="image/png" width="280"
+                height="280">
               <source media="(min-width: 768px)"
-                srcset="images/slider/espresso-tablet.png 1x, images/slider/espresso-tablet@2x.png 2x">
+                srcset="images/slider/espresso-tablet.png 1x, images/slider/espresso-tablet@2x.png 2x" type="image/png" width="280"
+                height="280">
               <img src="images/slider/espresso-mobile.png" srcset="images/slider/espresso-mobile@2x.png 2x" width="280"
                 height="280" alt="Изображение товара Тройной эспрессо">
             </picture>
@@ -154,17 +169,18 @@
               <div class="hero__price">
                 <del class="hero__old-price">395&#8381;</del>
                 <span class="hero__new-price">375&#8381;</span>
-                <a href="#!" class="button hero__button">Заказать</a>
+                <a class="button hero__button" href="#!">Заказать</a>
               </div>
             </div>
           </div>
           <div class="hero-swiper__pagination"></div>
-          <div class="hero-swiper__button hero-swiper__button--prev" aria-label="К предыдущему слайду" role="button">
+          <div class="hero-swiper__button hero-swiper__button--prev" role="button">
+            <span class="visually-hidden">К предыдущему слайду</span>
           </div>
-          <div class="hero-swiper__button hero-swiper__button--next" aria-label="К следующему слайду" role="button">
+          <div class="hero-swiper__button hero-swiper__button--next" role="button">
+            <span class="visually-hidden">К следующему слайду</span>
           </div>
         </div>
-
       </div>
     </section>
 
@@ -209,9 +225,9 @@
                 <legend class="filters__title">Цена</legend>
                 <div class="range__target"></div>
                 <div class="range__price">
-                  <input type="number" class="range__price-input" name="price-from" placeholder="0" form="catalog-form"
+                  <input class="range__price-input" type="number" name="price-from" placeholder="0" form="catalog-form"
                     min="0" max="1000" aria-label="Цена от">
-                  <input type="number" class="range__price-input" name="price-to" placeholder="900" form="catalog-form"
+                  <input class="range__price-input" type="number" name="price-to" placeholder="900" form="catalog-form"
                     min="0" max="1000" aria-label="Цена до">
                 </div>
               </fieldset>
@@ -281,10 +297,10 @@
           </section>
 
         </div>
-        <div class="basic-products__list--wrapper">
+        <div class="basic-products__container">
           <div class="basic-products__find find">
             <h2 class="find__title">Сортировка:</h2>
-            <select class="find__select" aria-label="Сортировка">
+            <select class="find__select" name="Сортировка" aria-label="Сортировка">
               <option value="default">по умолчанию</option>
               <option value="cheap">cначала дешёвые</option>
               <option value="expensive">cначала дорогие</option>
@@ -319,7 +335,7 @@
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
-                  <a class="cards__icon cards__button">В корзину</a>
+                  <a class="cards__icon cards__button" href="#!">В корзину</a>
                 </div>
               </div>
             </li>
@@ -350,7 +366,7 @@
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
-                  <a class="cards__icon cards__button">В корзину</a>
+                  <a class="cards__icon cards__button" href="#!">В корзину</a>
                 </div>
               </div>
             </li>
@@ -381,7 +397,7 @@
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
-                  <a class="cards__icon cards__button">В корзину</a>
+                  <a class="cards__icon cards__button" href="#!">В корзину</a>
                 </div>
               </div>
             </li>
@@ -412,7 +428,7 @@
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
-                  <a class="cards__icon cards__button">В корзину</a>
+                  <a class="cards__icon cards__button" href="#!">В корзину</a>
                 </div>
               </div>
             </li>
@@ -443,7 +459,7 @@
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
-                  <a class="cards__icon cards__button">В корзину</a>
+                  <a class="cards__icon cards__button" href="#!">В корзину</a>
                 </div>
               </div>
             </li>
@@ -474,32 +490,30 @@
                 </div>
                 <div class="cards__order">
                   <span class="cards__price">225₽</span>
-                  <a class="cards__icon cards__button">В корзину</a>
+                  <a class="cards__icon cards__button" href="#!">В корзину</a>
                 </div>
               </div>
             </li>
           </ul>
           <ul class="pagination slider-pagination">
             <li class="pagination__item">
-              <a href="#!"
-                class="button button--secondary pagination__link pagination__link--nav pagination__link--prev"
-                id="page-prev">
+              <a class="button button--secondary pagination__link pagination__link--nav pagination__link--prev"
+                href="#!" id="page-prev">
                 <span class="pagination__text slider-button-prev">Назад</span>
               </a>
             </li>
             <li class="pagination__item">
-              <a href="#!" class="button button--secondary pagination__link" id="page-1">1</a>
+              <a class="button button--secondary pagination__link" href="#!" id="page-1">1</a>
             </li>
             <li class="pagination__item">
-              <a class="button button--secondary pagination__link pagination__link--active" id="page-2">2</a>
+              <a class="button button--secondary pagination__link pagination__link--active" href="#!" id="page-2">2</a>
             </li>
             <li class="pagination__item">
-              <a href="#!" class="button button--secondary pagination__link" id="page-3">3</a>
+              <a class="button button--secondary pagination__link" href="#!" id="page-3">3</a>
             </li>
             <li class="pagination__item">
-              <a href="#!"
-                class="button button--secondary pagination__link pagination__link--nav pagination__link--next"
-                id="page-next">
+              <a class="button button--secondary pagination__link pagination__link--nav pagination__link--next"
+                href="#!" id="page-next">
                 <span class="pagination__text slider-button-next">Вперед</span>
               </a>
             </li>
@@ -534,8 +548,9 @@
       <div class="footer__header">
         <a class="logo footer__logo" href="#!">
           <picture>
-            <source media="(min-width: 768px)" srcset="./images/logo-desktop.svg">
-            <img class="logo__img" src="./images/logo-tablet.svg" alt="Логотип Drink2Go" width="82" height="36">
+            <source media="(min-width: 768px)" type="image/svg+xml" srcset="images/nav/logo-desktop.svg" width="82"
+              height="36">
+            <img class="logo__img" src="images/nav/logo-tablet.svg" alt="Логотип Drink2Go" width="82" height="36">
           </picture>
           <span class="logo__description logo__description--footer">Интернет-магазин кофейных напитков</span>
         </a>
@@ -546,48 +561,48 @@
             </a>
           </li>
           <li class="social__item">
-            <a href="https://pinterest.com" class="social__link social__link--pinterest"
+            <a class="social__link social__link--pinterest" href="https://pinterest.com"
               aria-label="Мы на Pinterest"></a>
           </li>
           <li class="social__item">
-            <a href="https://ok.ru" class="social__link social__link--ok" aria-label="Мы на одноклассниках"></a>
+            <a class="social__link social__link--ok" href="https://ok.ru" aria-label="Мы на одноклассниках"></a>
           </li>
         </ul>
       </div>
       <div class="footer-shop">
         <h3 class="footer__title">Интернет-магазин</h3>
         <ul class="footer__list">
-          <li class="footer-shop__item"><a href="#!" class="footer__link">Каталог</a></li>
-          <li class="footer-shop__item"><a href="#!" class="footer__link">Доставка</a></li>
-          <li class="footer-shop__item"><a href="#!" class="footer__link">Способы оплаты</a></li>
-          <li class="footer-shop__item"><a href="#!" class="footer__link">О нас</a></li>
+          <li class="footer-shop__item"><a class="footer__link" href="#!">Каталог</a></li>
+          <li class="footer-shop__item"><a class="footer__link" href="#!">Доставка</a></li>
+          <li class="footer-shop__item"><a class="footer__link" href="#!">Способы оплаты</a></li>
+          <li class="footer-shop__item"><a class="footer__link" href="#!">О нас</a></li>
         </ul>
       </div>
       <div class="footer-media">
         <h3 class="footer__title">Медиа</h3>
         <ul class="footer__list">
-          <li class="footer-media__item"><a href="#!" class="footer__link">Блог</a></li>
-          <li class="footer-media__item"><a href="#!" class="footer__link">Информация для СМИ</a></li>
-          <li class="footer-media__item"><a href="#!" class="footer__link">Правовая информация</a></li>
+          <li class="footer-media__item"><a class="footer__link" href="#!">Блог</a></li>
+          <li class="footer-media__item"><a class="footer__link" href="#!">Информация для СМИ</a></li>
+          <li class="footer-media__item"><a class="footer__link" href="#!">Правовая информация</a></li>
         </ul>
       </div>
       <div class="footer-contacts">
         <h3 class="footer__title">Контакты</h3>
         <ul class="footer__list footer__list--contacts">
           <li class="footer__links-item">
-            <a href="#!" class="footer__link footer__link--contacts footer__link--contacts-address">Санкт-Петербург,
+            <a class="footer__link footer__link--contacts footer__link--contacts-address" href="#!">Санкт-Петербург,
               набережная реки Карповки, дом
               5</a>
           </li>
           <li class="footer__links-item">
-            <a href="tel:+79999999" class="footer__link footer__link--contacts footer__link--contacts-telephone">+7
+            <a class="footer__link footer__link--contacts footer__link--contacts-telephone" href="tel:+79999999">+7
               (999) 999-99-99</a>
           </li>
         </ul>
       </div>
       <p class="footer__development">
         Разработано
-        в <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__development-link">HTML Academy</a>
+        в <a class="footer__development-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </p>
     </div>
   </footer>
