--- a/source/index.html
+++ b/source/index.html
@@ -606,6 +606,7 @@
   <script src="./vendor/noUiSlider/nouislider.js"></script>
   <script src="./vendor/swiper/swiper-bundle.min.js" defer></script>
   <script src="scripts/index.js" defer></script>
+  <p>Hello</p>
 </body>
 
 </html>
